# kmod

./: meson.build  meson_options.txt
build-aux/: create-rootfs.sh
libkmod/python/: meson.build
testsuite/: populate-modules.sh  testsuite.c
tools/: meson.build
